--- a/CSU1162python.ipynb
+++ b/CSU1162python.ipynb
@@ -943,25 +943,11 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-14T16:34:26.740895Z",
-     "start_time": "2025-09-14T16:34:23.115783Z"
+     "end_time": "2025-09-25T04:50:05.919935Z",
+     "start_time": "2025-09-25T04:50:00.889691Z"
     }
    },
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "98 is divisible by 3\n",
-      "98 is divisible by 8\n",
-      "98 is divisible by 15\n",
-      "98 is divisible by 50\n",
-      "98 is a Prime Number.\n"
-     ]
-    }
-   ],
-   "execution_count": 8,
    "source": [
     "#Practical 4: Write a Python program to check given number is a prime number or not.\n",
     "\n",
@@ -975,7 +961,7 @@
     "count = 0\n",
     "while counter < num:\n",
     "    if num % counter == 0:\n",
-    "        counter += 1\n",
+    "        count += 1\n",
     "        print(f\"{num} is divisible by {counter}\")\n",
     "    counter += 1\n",
     "if num > 1:\n",
@@ -986,13 +972,27 @@
     "else:\n",
     "    print(f\"{num} is not a Prime Number.\")"
    ],
-   "id": "de0ee959e6eedf37"
+   "id": "de0ee959e6eedf37",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "98 is divisible by 2\n",
+      "98 is divisible by 7\n",
+      "98 is divisible by 14\n",
+      "98 is divisible by 49\n",
+      "98 is NOT a Prime Number.\n"
+     ]
+    }
+   ],
+   "execution_count": 58
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-20T16:36:33.874275Z",
-     "start_time": "2025-09-20T16:36:33.865820Z"
+     "end_time": "2025-09-25T04:44:52.804818Z",
+     "start_time": "2025-09-25T04:44:52.800571Z"
     }
    },
    "cell_type": "code",
@@ -1022,7 +1022,7 @@
      ]
     }
    ],
-   "execution_count": 36
+   "execution_count": 54
   },
   {
    "metadata": {
@@ -1749,15 +1749,574 @@
    "execution_count": 30
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-25T03:56:11.665405Z",
+     "start_time": "2025-09-25T03:56:08.548841Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "#Practical 5:Write a Python program to check whether a given number is a palindrome or not.\n",
+    "\n",
+    "number = int(input(\"Please enter the number: \"))\n",
+    "numlist = list(str(number))\n",
+    "\n",
+    "if numlist == numlist[::-1]:\n",
+    "    print(\"The number is Palindrome.\")\n",
+    "else:\n",
+    "    print(\"The number is not Palindrome.\")"
+   ],
+   "id": "ec5947ec856f6da6",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number is palindrome.\n"
+     ]
+    }
+   ],
+   "execution_count": 52
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-24T17:14:58.391567Z",
+     "start_time": "2025-09-24T17:14:58.387330Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    " #-> List is one of the Sequence Data structure\n",
+    "\n",
+    "#-> Lists are collection of items (Strings, integers or even other lists)\n",
+    "\n",
+    "#-> Lists are enclosed in [ ].\n",
+    "\n",
+    "#-> Each item in the list has an assigned index value\n",
+    "\n",
+    "#-> Each item in a list is separated by a comma\n",
+    "\n",
+    "#-> Lists are mutable, which means they can be changed."
+   ],
+   "id": "4a8a585b3e6de85f",
+   "outputs": [],
+   "execution_count": 48
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-23T17:08:32.807110Z",
+     "start_time": "2025-09-23T17:08:32.796780Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#Take two shopping lists from two family members and merge them into one.\n",
     "\n"
    ],
-   "id": "ec5947ec856f6da6"
+   "id": "74e6db6c885ee82a",
+   "outputs": [],
+   "execution_count": 42
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-23T17:08:53.580653Z",
+     "start_time": "2025-09-23T17:08:53.578549Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#Take a list of integers from user and split into positives, negatives, and zeros.\n",
+    "\n"
+   ],
+   "id": "8886dcba64b7a992",
+   "outputs": [],
+   "execution_count": 43
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-23T17:09:24.868453Z",
+     "start_time": "2025-09-23T17:09:24.866045Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#Take input of contact names, allow user to add, delete, and display contacts using list operations.\n",
+    "\n"
+   ],
+   "id": "8ca6b672a548431b",
+   "outputs": [],
+   "execution_count": 44
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-25T05:06:12.817740Z",
+     "start_time": "2025-09-25T05:06:07.297975Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#Practical 6 : Write a simple python program to construct pascal's triangle for given number of rows (for loop only).\n",
+    "rows = int(input(\"Enter number of rows: \"))\n",
+    "for i in range(rows):\n",
+    "    for j in range(rows - i - 1):\n",
+    "        print(\" \", end=\"\")\n",
+    "    num = 1\n",
+    "    for k in range(i + 1):\n",
+    "        print(num, end=\" \")\n",
+    "        num = num * (i - k) // (k + 1)\n",
+    "    print()"
+   ],
+   "id": "7796818bd26668b9",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    1 \n",
+      "   1 1 \n",
+      "  1 2 1 \n",
+      " 1 3 3 1 \n",
+      "1 4 6 4 1 \n"
+     ]
+    }
+   ],
+   "execution_count": 63
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-07T06:44:35.168144Z",
+     "start_time": "2025-10-07T06:44:35.164948Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#Tuple ---\n",
+    "t = (1,(2,3),[1,2,3])\n",
+    "t[2][1] = 'x'"
+   ],
+   "id": "479f7205d638928d",
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-07T06:52:23.084984Z",
+     "start_time": "2025-10-07T06:52:23.081061Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#apply sort and sorted function on the list\n",
+    "t=(21,22,23,24,25)\n",
+    "print(sorted(t))\n",
+    "print(t)\n",
+    "#t.sort() #AttributeError: 'tuple' object has no attribute 'sort'\n",
+    "#Tuples are immutable, so they do not have a sort() method. However, you can use the sorted() function to return a new sorted list from the elements of the tuple."
+   ],
+   "id": "7a6f510e6eb8029e",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21, 22, 23, 24, 25]\n",
+      "(21, 22, 23, 24, 25)\n"
+     ]
+    }
+   ],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-08T09:24:46.598569Z",
+     "start_time": "2025-10-08T09:24:46.592912Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#Set ---\n",
+    "\n",
+    "s={1,2,3,4}\n",
+    "s.add(24)\n",
+    "print(s)\n",
+    "s.remove(2)\n",
+    "print(s)\n",
+    "s.discard(3)\n",
+    "print(s)\n",
+    "s.pop()\n",
+    "print(s)\n",
+    "s.clear()\n",
+    "print(s)"
+   ],
+   "id": "dcee59161c49234a",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 24}\n",
+      "{1, 3, 4, 24}\n",
+      "{1, 4, 24}\n",
+      "{4, 24}\n",
+      "set()\n"
+     ]
+    }
+   ],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-08T09:31:05.281679Z",
+     "start_time": "2025-10-08T09:31:05.276577Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#Dictionary ---\n",
+    "my_dict = {'name': 'John', 'age': 25}\n",
+    "print(my_dict['name'])\n",
+    "print(my_dict['age'])"
+   ],
+   "id": "6e9ed333c54b909d",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John\n",
+      "25\n"
+     ]
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-08T09:34:54.236892Z",
+     "start_time": "2025-10-08T09:34:54.231792Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "my_dict = {'name': 'John', 'age': 25,'city': 'New York'}\n",
+    "my_dict['name']='Krish'\n",
+    "my_dict['city']='ohio'\n",
+    "print(my_dict)"
+   ],
+   "id": "f0a011e27b4dd5d7",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Krish', 'age': 25, 'city': 'ohio'}\n"
+     ]
+    }
+   ],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-08T09:38:11.138766Z",
+     "start_time": "2025-10-08T09:38:11.134021Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "my_dict = {'name': 'John', 'age': 25,'city': 'New York'}\n",
+    "print(my_dict.pop('age'))\n",
+    "my_dict.popitem"
+   ],
+   "id": "421fa48954534a88",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function dict.popitem()>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 13
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-08T09:39:42.895714Z",
+     "start_time": "2025-10-08T09:39:42.891930Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "my_dict = {'name': 'John', 'age': 25,'city': 'New York'}\n",
+    "my_dict.clear()\n",
+    "print(my_dict)"
+   ],
+   "id": "f83860880d1eddb",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
+   "execution_count": 17
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-08T09:40:00.866742Z",
+     "start_time": "2025-10-08T09:40:00.862820Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "my_dict = {'name': 'John', 'age': 25,'city': 'New York'}\n",
+    "my_dict.del()\n",
+    "print(my_dict)"
+   ],
+   "id": "2063f48e723b24f1",
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3464919557.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[18]\u001B[39m\u001B[32m, line 2\u001B[39m\n\u001B[31m    \u001B[39m\u001B[31mmy_dict.del()\u001B[39m\n            ^\n\u001B[31mSyntaxError\u001B[39m\u001B[31m:\u001B[39m invalid syntax\n"
+     ]
+    }
+   ],
+   "execution_count": 18
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-08T09:46:29.986618Z",
+     "start_time": "2025-10-08T09:46:29.982590Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "my_dict = {2:4,3:9,4:16,5:25}\n",
+    "dict2 = my_dict.copy()\n",
+    "print(dict2)\n",
+    "\n",
+    "dict3 = print(dict2.items())\n",
+    "print(dict2.keys())"
+   ],
+   "id": "918d575eca961392",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2: 4, 3: 9, 4: 16, 5: 25}\n",
+      "dict_items([(2, 4), (3, 9), (4, 16), (5, 25)])\n",
+      "dict_keys([2, 3, 4, 5])\n"
+     ]
+    }
+   ],
+   "execution_count": 22
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-08T09:55:40.110592Z",
+     "start_time": "2025-10-08T09:55:40.106389Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "#String ---\n",
+   "id": "a21cc2810cc8b488",
+   "outputs": [],
+   "execution_count": 23
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-16T04:42:20.108745Z",
+     "start_time": "2025-10-16T04:41:37.913451Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#Practical 7: a. Given a string , create a dictionary where the keys are the words and the values are the length of those words.\n",
+    "\n",
+    "str = input(\"Enter a string:\")\n",
+    "dict = {}\n",
+    "for word in str.split():\n",
+    "    dict[word] = len(word)\n",
+    "print(dict)"
+   ],
+   "id": "23ac944b3541e84f",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'pyhtonisacodinglanguage': 23}\n"
+     ]
+    }
+   ],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-14T06:37:34.643943Z",
+     "start_time": "2025-10-14T06:37:18.539293Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#b. Given a list of Integers , find all pairs whose sum is equal to a given target.\n",
+    "\n",
+    "input_list_str = input(\"Enter a list of integers, separated by commas (e.g., 3, 4, 1, 2, 9): \")\n",
+    "target_sum_str = input(\"Enter the target sum (e.g., 7): \")\n",
+    "if result_pairs:\n",
+    "    print(f\"The pairs that sum up to {target} are: {result_pairs}\")\n",
+    "else:\n",
+    "    print(f\"No pairs were found that sum up to {target}.\")"
+   ],
+   "id": "dec2bbb9019f59ea",
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'result_pairs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mNameError\u001B[39m                                 Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[1]\u001B[39m\u001B[32m, line 5\u001B[39m\n\u001B[32m      3\u001B[39m input_list_str = \u001B[38;5;28minput\u001B[39m(\u001B[33m\"\u001B[39m\u001B[33mEnter a list of integers, separated by commas (e.g., 3, 4, 1, 2, 9): \u001B[39m\u001B[33m\"\u001B[39m)\n\u001B[32m      4\u001B[39m target_sum_str = \u001B[38;5;28minput\u001B[39m(\u001B[33m\"\u001B[39m\u001B[33mEnter the target sum (e.g., 7): \u001B[39m\u001B[33m\"\u001B[39m)\n\u001B[32m----> \u001B[39m\u001B[32m5\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m \u001B[43mresult_pairs\u001B[49m:\n\u001B[32m      6\u001B[39m     \u001B[38;5;28mprint\u001B[39m(\u001B[33mf\u001B[39m\u001B[33m\"\u001B[39m\u001B[33mThe pairs that sum up to \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mtarget\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m are: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mresult_pairs\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m\"\u001B[39m)\n\u001B[32m      7\u001B[39m \u001B[38;5;28;01melse\u001B[39;00m:\n",
+      "\u001B[31mNameError\u001B[39m: name 'result_pairs' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-16T04:50:43.640332Z",
+     "start_time": "2025-10-16T04:50:43.636420Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#c. Rotate elements in a tuple by 'n' positions to the left and right.\n",
+    "\n",
+    "def rotate_tuple(tup, n):\n",
+    "    length = len(tup)\n",
+    "    n = n % length\n",
+    "    return tup[-n:] + tup[:-n]\n",
+    "\n",
+    "my_tuple = (1, 2, 3, 4, 5)\n",
+    "\n",
+    "right_rotated = rotate_tuple(my_tuple, 2)\n",
+    "print(f\"Right by 2: {right_rotated}\")\n",
+    "\n",
+    "left_rotated = rotate_tuple(my_tuple, -2)\n",
+    "print(f\"Left by 2: {left_rotated}\")"
+   ],
+   "id": "cfb397982cdd6979",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Right by 2: (4, 5, 1, 2, 3)\n",
+      "Left by 2: (3, 4, 5, 1, 2)\n"
+     ]
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-14T06:59:06.521843Z",
+     "start_time": "2025-10-14T06:58:58.368719Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#Write a python program to print highest common factor (HCF) of two numbers.\n",
+    "\n",
+    "def hcf(a, b):\n",
+    "    a = abs(int(a))\n",
+    "    b = abs(int(b))\n",
+    "\n",
+    "    while b:\n",
+    "        a, b = b, a % b\n",
+    "    return a\n",
+    "\n",
+    "num1 = int(input(\"Enter first number: \"))\n",
+    "num2 = int(input(\"Enter second number: \"))\n",
+    "\n",
+    "result = hcf(num1, num2)\n",
+    "print(f\"The HCF of {num1} and {num2} is: {result}\")"
+   ],
+   "id": "560339dc8d4860b4",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The HCF of 8 and 16 is: 8\n"
+     ]
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-28T06:29:45.625037Z",
+     "start_time": "2025-10-28T06:29:45.623261Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "9d3f15e369484a2d",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-28T06:29:32.393955Z",
+     "start_time": "2025-10-28T06:29:32.391127Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "dd17edcd2f1e0978",
+   "outputs": [],
+   "execution_count": 9
   }
  ],
  "metadata": {
