fixed last bugs

--- a/CSU1162python.ipynb
+++ b/CSU1162python.ipynb
@@ -1597,8 +1597,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-17T09:46:40.077194Z",
-     "start_time": "2025-09-17T09:46:40.058502Z"
+     "end_time": "2025-10-30T05:20:52.749690Z",
+     "start_time": "2025-10-30T05:20:52.584805Z"
     }
    },
    "cell_type": "code",
@@ -1615,12 +1615,12 @@
      "traceback": [
       "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
       "\u001B[31mTypeError\u001B[39m                                 Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[22]\u001B[39m\u001B[32m, line 2\u001B[39m\n\u001B[32m      1\u001B[39m lst = [\u001B[32m1\u001B[39m, \u001B[32m20\u001B[39m, \u001B[33m'\u001B[39m\u001B[33mb\u001B[39m\u001B[33m'\u001B[39m, \u001B[32m5\u001B[39m, \u001B[33m'\u001B[39m\u001B[33ma\u001B[39m\u001B[33m'\u001B[39m]\n\u001B[32m----> \u001B[39m\u001B[32m2\u001B[39m \u001B[38;5;28mprint\u001B[39m(\u001B[43mlst\u001B[49m\u001B[43m.\u001B[49m\u001B[43msort\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m) \u001B[38;5;66;03m# sort List with element of different datatypes\u001B[39;00m\n",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[3]\u001B[39m\u001B[32m, line 2\u001B[39m\n\u001B[32m      1\u001B[39m lst = [\u001B[32m1\u001B[39m, \u001B[32m20\u001B[39m, \u001B[33m'\u001B[39m\u001B[33mb\u001B[39m\u001B[33m'\u001B[39m, \u001B[32m5\u001B[39m, \u001B[33m'\u001B[39m\u001B[33ma\u001B[39m\u001B[33m'\u001B[39m]\n\u001B[32m----> \u001B[39m\u001B[32m2\u001B[39m \u001B[38;5;28mprint\u001B[39m(\u001B[43mlst\u001B[49m\u001B[43m.\u001B[49m\u001B[43msort\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m) \u001B[38;5;66;03m# sort List with element of different datatypes\u001B[39;00m\n",
       "\u001B[31mTypeError\u001B[39m: '<' not supported between instances of 'str' and 'int'"
      ]
     }
    ],
-   "execution_count": 22
+   "execution_count": 3
   },
   {
    "metadata": {
@@ -2089,28 +2089,27 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-08T09:40:00.866742Z",
-     "start_time": "2025-10-08T09:40:00.862820Z"
+     "end_time": "2025-10-29T13:57:34.735023Z",
+     "start_time": "2025-10-29T13:57:34.731943Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "my_dict = {'name': 'John', 'age': 25,'city': 'New York'}\n",
-    "my_dict.del()\n",
+    "my_dict = {'name': 'John', 'age': 25, 'city': 'New York'}\n",
+    "del my_dict['age']\n",
     "print(my_dict)"
    ],
    "id": "2063f48e723b24f1",
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3464919557.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[18]\u001B[39m\u001B[32m, line 2\u001B[39m\n\u001B[31m    \u001B[39m\u001B[31mmy_dict.del()\u001B[39m\n            ^\n\u001B[31mSyntaxError\u001B[39m\u001B[31m:\u001B[39m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'John', 'city': 'New York'}\n"
      ]
     }
    ],
-   "execution_count": 18
+   "execution_count": 1
   },
   {
    "metadata": {
@@ -2187,60 +2186,60 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-14T06:37:34.643943Z",
-     "start_time": "2025-10-14T06:37:18.539293Z"
+     "end_time": "2025-10-30T04:43:59.160642Z",
+     "start_time": "2025-10-30T04:43:39.393585Z"
     }
    },
    "cell_type": "code",
    "source": [
     "#b. Given a list of Integers , find all pairs whose sum is equal to a given target.\n",
     "\n",
-    "input_list_str = input(\"Enter a list of integers, separated by commas (e.g., 3, 4, 1, 2, 9): \")\n",
-    "target_sum_str = input(\"Enter the target sum (e.g., 7): \")\n",
-    "if result_pairs:\n",
-    "    print(f\"The pairs that sum up to {target} are: {result_pairs}\")\n",
-    "else:\n",
-    "    print(f\"No pairs were found that sum up to {target}.\")"
+    "nums = list(map(int,input(\"Enter the numbers separated by space: \").split()))\n",
+    "target = int(input(\"Enter the target number: \"))\n",
+    "\n",
+    "pairs = set()\n",
+    "\n",
+    "for i in range(len(nums)):\n",
+    "    for j in range (i+1, len(nums)):\n",
+    "        if nums[i] + nums[j] == target:\n",
+    "            pairs.add((nums[i], nums[j]))\n",
+    "print(f\"Pairs with target number {target} are: \")\n",
+    "for p in pairs:\n",
+    "    print(p)"
    ],
    "id": "dec2bbb9019f59ea",
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'result_pairs' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mNameError\u001B[39m                                 Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[1]\u001B[39m\u001B[32m, line 5\u001B[39m\n\u001B[32m      3\u001B[39m input_list_str = \u001B[38;5;28minput\u001B[39m(\u001B[33m\"\u001B[39m\u001B[33mEnter a list of integers, separated by commas (e.g., 3, 4, 1, 2, 9): \u001B[39m\u001B[33m\"\u001B[39m)\n\u001B[32m      4\u001B[39m target_sum_str = \u001B[38;5;28minput\u001B[39m(\u001B[33m\"\u001B[39m\u001B[33mEnter the target sum (e.g., 7): \u001B[39m\u001B[33m\"\u001B[39m)\n\u001B[32m----> \u001B[39m\u001B[32m5\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m \u001B[43mresult_pairs\u001B[49m:\n\u001B[32m      6\u001B[39m     \u001B[38;5;28mprint\u001B[39m(\u001B[33mf\u001B[39m\u001B[33m\"\u001B[39m\u001B[33mThe pairs that sum up to \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mtarget\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m are: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mresult_pairs\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m\"\u001B[39m)\n\u001B[32m      7\u001B[39m \u001B[38;5;28;01melse\u001B[39;00m:\n",
-      "\u001B[31mNameError\u001B[39m: name 'result_pairs' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pairs with target number 7 are: \n",
+      "(1, 6)\n",
+      "(2, 5)\n",
+      "(3, 4)\n"
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-16T04:50:43.640332Z",
-     "start_time": "2025-10-16T04:50:43.636420Z"
+     "end_time": "2025-10-30T13:21:59.676815Z",
+     "start_time": "2025-10-30T13:21:51.876153Z"
     }
    },
    "cell_type": "code",
    "source": [
     "#c. Rotate elements in a tuple by 'n' positions to the left and right.\n",
     "\n",
-    "def rotate_tuple(tup, n):\n",
-    "    length = len(tup)\n",
-    "    n = n % length\n",
-    "    return tup[-n:] + tup[:-n]\n",
-    "\n",
-    "my_tuple = (1, 2, 3, 4, 5)\n",
-    "\n",
-    "right_rotated = rotate_tuple(my_tuple, 2)\n",
-    "print(f\"Right by 2: {right_rotated}\")\n",
-    "\n",
-    "left_rotated = rotate_tuple(my_tuple, -2)\n",
-    "print(f\"Left by 2: {left_rotated}\")"
+    "tup = tuple(map(int,input(\"Enter tuple element seprated by space: \").split()))\n",
+    "n = int(input(\"Enter number of positions to rotate: \"))\n",
+    "left_rotated = tup[n:] + tup[:n]\n",
+    "right_rotated = tup[-n:] + tup[:-n]\n",
+    "print(\"Original tuple:\", tup)\n",
+    "print(\"left_rotated:\", left_rotated)\n",
+    "print(\"right_rotated:\", right_rotated)"
    ],
    "id": "cfb397982cdd6979",
    "outputs": [
@@ -2248,12 +2247,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Right by 2: (4, 5, 1, 2, 3)\n",
-      "Left by 2: (3, 4, 5, 1, 2)\n"
+      "Original tuple: (1, 2, 3, 4, 5)\n",
+      "left_rotated: (3, 4, 5, 1, 2)\n",
+      "right_rotated: (4, 5, 1, 2, 3)\n"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 6
   },
   {
    "metadata": {
@@ -2295,28 +2295,77 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-28T06:29:45.625037Z",
-     "start_time": "2025-10-28T06:29:45.623261Z"
+     "end_time": "2025-10-30T04:42:24.800523Z",
+     "start_time": "2025-10-30T04:41:10.688994Z"
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "#Practical 8 : Write a python program that generates power set of a given list of Integers recursively\n",
+    "#a. Keep only the groups where adding all numbers gives an even number\n",
+    "#b. Arrange the groups so that the smallest groups comes last.\n",
+    "\n",
+    "numList = []\n",
+    "while True:\n",
+    "    num = input(\"Please enter a number or leave blank to proceed: \")\n",
+    "    if not num:\n",
+    "        break\n",
+    "    numList.append(int(num))\n",
+    "print(f\"List of numbers: {numList}\")\n",
+    "\n",
+    "def powerSet(numList):\n",
+    "    if not numList:\n",
+    "        return [[]]\n",
+    "    first = numList[0]\n",
+    "    rest = numList[1:]\n",
+    "    powerSet1 = powerSet(rest)\n",
+    "    subSets = [[first] + subset for subset in powerSet1]\n",
+    "    return powerSet1 + subSets\n",
+    "\n",
+    "def evenSet(power_set):\n",
+    "    return [subset for subset in power_set if sum(subset) % 2 == 0]\n",
+    "\n",
+    "def arrangeSet(list_of_lists):\n",
+    "    return sorted(list_of_lists, key=len, reverse=True)\n",
+    "\n",
+    "def finalSet(inputList):\n",
+    "    power = powerSet(inputList)\n",
+    "    even = evenSet(power)\n",
+    "    arranged = arrangeSet(even)\n",
+    "    return arranged\n",
+    "\n",
+    "result = finalSet(numList)\n",
+    "print(\"\\nFinal Result:\")\n",
+    "for group in result:\n",
+    "    print(f\"{group}\",end=\"\\t\")"
+   ],
    "id": "9d3f15e369484a2d",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of numbers: [1, 2, 3]\n",
+      "\n",
+      "Final Result:\n",
+      "[1, 2, 3]\t[1, 3]\t[2]\t[]\t"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-28T06:29:32.393955Z",
-     "start_time": "2025-10-28T06:29:32.391127Z"
+     "end_time": "2025-10-30T03:57:52.620783Z",
+     "start_time": "2025-10-30T03:57:52.617783Z"
     }
    },
    "cell_type": "code",
    "source": "",
    "id": "dd17edcd2f1e0978",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": null
   }
  ],
  "metadata": {
